--- a/src/css/easymde.css
+++ b/src/css/easymde.css
@@ -53,7 +53,7 @@
 }
 
 .EasyMDEContainer .CodeMirror-placeholder {
-    opacity: .5;
+    opacity: 0.5;
 }
 
 .EasyMDEContainer .CodeMirror-focused .CodeMirror-selected {
@@ -94,7 +94,13 @@
     width: 20px;
     height: 50px;
     background: -moz-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(100%, rgba(255, 255, 255, 0)));
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        color-stop(0%, rgba(255, 255, 255, 1)),
+        color-stop(100%, rgba(255, 255, 255, 0))
+    );
     background: -webkit-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
     background: -o-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
     background: -ms-linear-gradient(left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
@@ -110,7 +116,13 @@
     width: 20px;
     height: 50px;
     background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(255, 255, 255, 1)));
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        color-stop(0%, rgba(255, 255, 255, 0)),
+        color-stop(100%, rgba(255, 255, 255, 1))
+    );
     background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
     background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
     background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
@@ -126,7 +138,8 @@
     width: 100%;
 }
 
-.editor-toolbar button, .editor-toolbar .easymde-dropdown {
+.editor-toolbar button,
+.editor-toolbar .easymde-dropdown {
     background: transparent;
     display: inline-block;
     text-align: center;
@@ -163,7 +176,7 @@
 }
 
 .editor-toolbar button:after {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 65%;
     vertical-align: text-bottom;
     position: relative;
@@ -171,27 +184,27 @@
 }
 
 .editor-toolbar button.heading-1:after {
-    content: "1";
+    content: '1';
 }
 
 .editor-toolbar button.heading-2:after {
-    content: "2";
+    content: '2';
 }
 
 .editor-toolbar button.heading-3:after {
-    content: "3";
+    content: '3';
 }
 
 .editor-toolbar button.heading-bigger:after {
-    content: "▲";
+    content: '▲';
 }
 
 .editor-toolbar button.heading-smaller:after {
-    content: "▼";
+    content: '▼';
 }
 
 .editor-toolbar.disabled-for-preview button:not(.no-disable) {
-    opacity: .6;
+    opacity: 0.6;
     pointer-events: none;
 }
 
@@ -219,15 +232,15 @@
 }
 
 .editor-statusbar .lines:before {
-    content: 'lines: '
+    content: 'lines: ';
 }
 
 .editor-statusbar .words:before {
-    content: 'words: '
+    content: 'words: ';
 }
 
 .editor-statusbar .characters:before {
-    content: 'characters: '
+    content: 'characters: ';
 }
 
 .editor-preview-full {
@@ -257,7 +270,7 @@
 }
 
 .editor-preview-active-side {
-    display: block
+    display: block;
 }
 
 .EasyMDEContainer.sided--no-fullscreen .editor-preview-active-side {
@@ -267,7 +280,7 @@
 }
 
 .editor-preview-active {
-    display: block
+    display: block;
 }
 
 .editor-preview {
@@ -276,7 +289,7 @@
 }
 
 .editor-preview > p {
-    margin-top: 0
+    margin-top: 0;
 }
 
 .editor-preview pre {
@@ -307,15 +320,15 @@
 }
 
 .cm-s-easymde .cm-header-2 {
-    font-size: calc(1.325rem + .9vw);
+    font-size: calc(1.325rem + 0.9vw);
 }
 
 .cm-s-easymde .cm-header-3 {
-    font-size: calc(1.3rem + .6vw);
+    font-size: calc(1.3rem + 0.6vw);
 }
 
 .cm-s-easymde .cm-header-4 {
-    font-size: calc(1.275rem + .3vw);
+    font-size: calc(1.275rem + 0.3vw);
 }
 
 .cm-s-easymde .cm-header-5 {
@@ -332,12 +345,12 @@
 .cm-s-easymde .cm-header-4,
 .cm-s-easymde .cm-header-5,
 .cm-s-easymde .cm-header-6 {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     line-height: 1.2;
 }
 
 .cm-s-easymde .cm-comment {
-    background: rgba(0, 0, 0, .05);
+    background: rgba(0, 0, 0, 0.05);
     border-radius: 2px;
 }
 
